test/classes/initializers/errors/errHandling/deinitFields.bad
In C's init
In R's init
Caught error
Past creation of myC
